fix horizontal scroll issue

--- a/style/_globals.scss
+++ b/style/_globals.scss
@@ -8,7 +8,8 @@ body {
   font-family: "Nunito", sans-serif;
   line-height: 2rem;
   background-color: $dark-blue;
-  color: white;
+  color: #ffffff;
+  overflow-x: hidden;
 }
 
 img {
