--- a/style/_media-queries.scss
+++ b/style/_media-queries.scss
@@ -114,10 +114,10 @@
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
-    padding: 1rem;
+    padding: 3rem;
     margin-bottom: 5rem;
     h2 {
-      width: 60%;
+      width: 100%;
       font-size: 4rem;
       line-height: 6rem;
     }
