--- a/style/style.css
+++ b/style/style.css
@@ -10,7 +10,8 @@ body {
   font-family: "Nunito", sans-serif;
   line-height: 2rem;
   background-color: #2c3e50;
-  color: white;
+  color: #ffffff;
+  overflow-x: hidden;
 }
 
 img {
@@ -705,11 +706,11 @@ footer {
     -webkit-box-align: center;
         -ms-flex-align: center;
             align-items: center;
-    padding: 1rem;
+    padding: 3rem;
     margin-bottom: 5rem;
   }
   .responsive.flex.cl.al-i h2 {
-    width: 60%;
+    width: 100%;
     font-size: 4rem;
     line-height: 6rem;
   }
